<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backLastPage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_arrow"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSuperbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy_title_superb"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginStart="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvSuperbContent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSuperbContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy_content_growth_term"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSuperbTitle"
        app:layout_constraintBottom_toTopOf="@id/tvLackTitle"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLackTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy_title_lack"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginStart="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSuperbContent"
        app:layout_constraintBottom_toTopOf="@id/tvLackContent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLackContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategy_content_growth_term"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLackTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnNextPage"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextPage"
        android:layout_width="176dp"
        android:layout_height="99dp"
        android:background="@drawable/ic_btn_goto_main"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hiView"/>

    <View
        android:id="@+id/hiView"
        android:layout_width="210dp"
        android:layout_height="240dp"
        android:background="@drawable/ic_robot_illustrate"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>