<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/titleTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/title_1"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvProfit"/>

            <TextView
                android:id="@+id/tvProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="獲利方式："
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvContentProfit"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/text_1_profit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfit" />

            <TextView
                android:id="@+id/tvTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="標的選擇："
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvContentProfit"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvContentTarget"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/text_1_target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTarget"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="評估方式："
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvContentTarget"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvContentSkills"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/text_1_have_skills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSkills"
                app:layout_constraintStart_toStartOf="parent"/>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/image_growth_type"
                app:layout_constraintTop_toBottomOf="@+id/tvContentSkills"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnConfirm"/>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="確定選擇"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_bookmark_24dp" />

    </FrameLayout>

</androidx.cardview.widget.CardView>
